Fix code nowrap scope to apply only to inline-code blocks

--- a/notes/obsidian.css
+++ b/notes/obsidian.css
@@ -39,14 +39,14 @@
 --background-modifier-error-hover:	#470000;
 --background-modifier-cover:	rgba(0, 0, 0, 0.6);
 
---text-accent:	#9bb7c5;
+--text-accent:	#86c5ba;
 --text-accent-hover:	var(--text-faint);
 --text-normal:	#959595;
 --text-muted:	rgb(109, 109, 109);
 --text-faint:	rgb(109, 109, 109);
 --text-error:	#800000;
 --text-error-hover:	#990000;
---text-highlight-bg:	var(--text-selection);
+--text-highlight-bg:	rgb(41, 187, 165);
 --text-selection:	rgba(78, 73, 31, 0.572);
 --text-on-accent:	var(--text-normal);
 --interactive-normal:	var(--background-primary);
@@ -188,6 +188,9 @@ background-color: var(--link-bg-hover)!important;
 color: var(--link-text-hover)!important;
 }
 
+p code {
+  white-space: nowrap;
+}
 
 p {
   margin-top: 5px;
@@ -290,8 +293,16 @@ line-height: var(--line-height-footnote);
 .cm-s-obsidian span.cm-footref {
 
 }
- */
+*/
 
+/***********************/
+/*       Highlight     */
+/***********************/
+.markdown-preview-view mark,
+.span.cm-highlight {
+  color: rgb(0, 0, 0) !important;
+  padding: 0 5px;
+}
 
 /***************************************/
 /* resize-handle and borders */
@@ -625,15 +636,10 @@ pre code {
 font-family: var(--font-family-code) !important;
 font-size: var(--font-size-code) !important;
 background-color: var(--pre-code-bg) !important;
-white-space: nowrap;
 padding: 1em !important;
 line-height: normal;
 display: block;
 color: var(--code-block) !important;
-}
-
-.markdown-preview-view code {
-  white-space: nowrap;
 }
 
 
@@ -829,7 +835,7 @@ font-size: var(--font-size-blockquote);
 /* for preview */
 .markdown-preview-view blockquote {
 	font-size: var(--font-size-blockquote);
-	background-color: hsla(205, 100%, 8%, 0.372) !important;
+	background-color: hsla(172, 78%, 9%, 0.579) !important;
 	border-left: 5px solid var(--bracket-color)!important;
 	border-top: 0px;
 	border-bottom: 0px;
@@ -844,14 +850,13 @@ font-size: var(--font-size-blockquote);
 	quotes: "\201C""\201D""\2018""\2019";
 }
 
-.markdown-preview-view blockquote:before {
+/* .markdown-preview-view blockquote:before {
 	color: var(--text-title-h1);
 	content: open-quote;
 	font-size: 4em;
 	line-height: 0.1em;
-/* 	margin-right: 0.25em; */
 	vertical-align: -0.4em;
-}
+} */
 
 .markdown-preview-view blockquote p {
 /* 	color: #23384d; */
@@ -861,9 +866,9 @@ font-size: var(--font-size-blockquote);
 		font-style: normal;
 }
 
-.markdown-preview-view blockquote::before {
+/* .markdown-preview-view blockquote::before {
 	content: "\201C"
-}
+} */
 
 
 
@@ -1603,6 +1608,7 @@ border-color: var(--background-secondary-alt);
 padding: 0 30px;
 height: 2.3rem;
 line-height: 30px;
+max-height: 40px;
 }
 .status-bar-item {
 background-color: var(--background-primary);
